k8s/kustomize/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gospeed-server
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: speed.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gospeed-server-tcp
                port:
                  number: 9000
