k8s/kustomize/overlays/prod/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: gospeed-server
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: gospeed
      app.kubernetes.io/component: server
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
        - port: 9000
          protocol: TCP
        - port: 9000
          protocol: UDP
        - port: 8080
          protocol: TCP
  egress:
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
